--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "fcc-learn-npm-package-json",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongodb": "^3.0.5",
+    "monk": "^6.0.5",
+    "mongoose": "5.0.13",
+    "pug": "^2.0.3",
+    "morgan": "^1.9.0",
+    "chalk": "^2.4.0",
+    "moment": "^2.22.1",
+    "ejs": "^2.5.9"
   },
   "main": "server.js",
   "scripts": {
